--- a/Fragments/app/src/main/res/values/strings.xml
+++ b/Fragments/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Fragments</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="userName_text"> User Name</string>
+    <string name="password_text"> Password</string>
+
 </resources>
