--- a/Fragments/app/src/main/res/values/strings.xml
+++ b/Fragments/app/src/main/res/values/strings.xml
@@ -35,4 +35,10 @@
         <item>Tecnología</item>
     </string-array>
 
+     <string-array name="Gender">
+         <item>Hombre</item>
+         <item>Mujer</item>
+     </string-array>
+
+
 </resources>
