(added and improvements) register user endded .
Just need to do the save userTema in Spring.

--- a/Fragments/app/src/main/res/values/strings.xml
+++ b/Fragments/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="password_text"> Password</string>
 
      <string-array name="Gender">
-         <item>Hombre</item>
-         <item>Mujer</item>
+         <item>Male</item>
+         <item>Female</item>
      </string-array>
 
 
