(ended) Language changed throughout the entire app and updated the current activity.

--- a/Fragments/app/src/main/res/values/strings.xml
+++ b/Fragments/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="cancelar" translatable="false"></string>
     <string name="confirmar" translatable="false"></string>
     <string name="resgistro_mensaje" translatable="false"></string>
+    <string name="iniciar_sesion" translatable="false"></string>
+    <string name="resgistrarse" translatable="false"></string>
+
+
 
     <string-array name="Gender">
         <item></item>
